--- a/index/templates/home.html
+++ b/index/templates/home.html
@@ -48,9 +48,10 @@
 		<button class="btn-close btn btn-sm">×</button>
 		<div class="container">
 			<div class="hero">
-				<h1>我的秘密花园</h1>
+				<h1>Winter Is Coming</h1>
 				<p>PiPi和MoMo</p>
-				<p>一个擅长咆哮,一个擅长卖萌</p>
+				<p>一个是叫唤狗,一个是卖萌猫</p>
+                                <p>阁下来自: {{ REMOTE_ADDR }}</p>
 				<a class="btn btn-b" href="/graphql">请戳我</a>
 			</div>
 			<div class="row">
