--- a/blog/templates/blog.html
+++ b/blog/templates/blog.html
@@ -1,13 +1,14 @@
-<!doctype html>
-<html lang="zh-hans">
-<head>
-    <meta charset="utf-8">
-    <title>CC Blog Demo</title>
-</head>
-<body>
-    <p>日记</p>
-    <p>标题:{{ post.title }}</p>
+{% extends "base.html" %}
+{% block title %}
+    {{ post.title }}
+{% endblock %}
+
+{% block blog-title %}
+    {{ post.title }}
+{% endblock %}
+
+
+{% block content %}
     <p>发布时间:{{ post.update_time |date:'Y /m /d' }}</p>
-    <p>内容:{{ post.content|safe }}</p>
-</body>
-</html>
+    <p>{{ post.content|safe }}</p
+{% endblock %}
