--- a/index/templates/home.html
+++ b/index/templates/home.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>PiPi和MoMo</title>
+		<title>望山而川</title>
 
 		<link href="//mincss.com/entireframework.min.css" rel="stylesheet" type="text/css">
 
@@ -48,9 +48,8 @@
 		<button class="btn-close btn btn-sm">×</button>
 		<div class="container">
 			<div class="hero">
-				<h1>Winter Is Coming</h1>
-				<p>PiPi和MoMo</p>
-				<p>一个是叫唤狗,一个是卖萌猫</p>
+				<h1>一世浮生一刹那，一树菩提一烟霞。</h1>
+				<p>一个是我的你,一个是卖萌的猫</p>
                                 <p>阁下来自: {{ REMOTE_ADDR }}</p>
 				<a class="btn btn-b" href="/graphql">请戳我</a>
 			</div>
