--- a/index/templates/home.html
+++ b/index/templates/home.html
@@ -48,7 +48,7 @@
 		<button class="btn-close btn btn-sm">×</button>
 		<div class="container">
 			<div class="hero">
-				<h1>一世浮生一刹那，一树菩提一烟霞。</h1>
+				<h1>{{ main_msg }}</h1>
 				<p>一个是我的你,一个是卖萌的猫</p>
                                 <p>阁下来自: {{ REMOTE_ADDR }}</p>
 				<a class="btn btn-b" href="/graphql">请戳我</a>
