& 文章列表页

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -13,13 +13,13 @@
 			<div class="container">
 				<a class="pagename current" href="/">望山而川</a>
                                 <a href="#">F**kingPM</a>
-                                <a href="/blog/">I Am Your Father</a>
+                                <a href="{% url 'blog_post_list' %}">I Am Your Father</a>
                                 <a href="https://996.icu"><img src="https://img.shields.io/badge/link-996.icu-red.svg" alt="996.icu"></a>
 			</div>
 		</nav>
 		<button class="btn-close btn btn-sm">×</button>
 		<div class="container">
-			<h1>{% block blog-title %} blog-title {% endblock %}</h1>
+			<h1>{% block blog-title %}{% endblock %}</h1>
 			{% block content %}
 			{% endblock %}
 		</div>
