--- a/index/templates/home.html
+++ b/index/templates/home.html
@@ -39,7 +39,7 @@
 	<body>
 		<nav class="nav" tabindex="-1" onclick="this.focus()">
 			<div class="container">
-				<a class="pagename current" href="https://github.com">望山而川</a>
+				<a class="pagename current" href="{% url 'home' %}">望山而川</a>
 				<a href="#">F**kingPM</a>
 				<a href="blog_post_list/">I Am Your Father</a> 
 				<a href="https://996.icu"><img src="https://img.shields.io/badge/link-996.icu-red.svg" alt="996.icu"></a>
