--- a/index/templates/home.html
+++ b/index/templates/home.html
@@ -40,7 +40,7 @@
 		<nav class="nav" tabindex="-1" onclick="this.focus()">
 			<div class="container">
 				<a class="pagename current" href="{% url 'home' %}">望山而川</a>
-				<a href="#">F**kingPM</a>
+				<a href="https://github.com/astaxie/build-web-application-with-golang/blob/master/zh/preface.md">F**kingPM</a>
 				<a href="blog_post_list/">I Am Your Father</a> 
 				<a href="https://996.icu"><img src="https://img.shields.io/badge/link-996.icu-red.svg" alt="996.icu"></a>
 			</div>
